fixed jumping buttons

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -137,6 +137,15 @@ img{
     margin-left: -1.2em;
 }
 
+#bet {
+    margin-top: 45em;
+    position: fixed;
+    margin-left: -17em;
+}
+
+#bet-amount{
+
+}
 
 #card-text{
     color: black;
@@ -220,9 +229,13 @@ span{
     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f6f6f6 ', endColorstr='#ffffff ',GradientType=0);
     background-color:#f6f6f6 ;
 }
-.myButton:active {
-    position:relative;
-    top:1px;
+// #fold:active {
+//     position:static;
+//     top:1px;
+// }
+
+#secret:active{
+    position:static;
 }
 
 
